--- a/P004641.opf/meta.yml
+++ b/P004641.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P004641
+id: P004641
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1AC26
   title: དབུ་མ་ལ་འཇུག་པའི་ཚིག་འགྲེལ་ལེགས་བཤད་རྗེས་འབྲང་།
-  volume: ''
   author: ''
+  volumes: {}
