--- a/P004641.opf/meta.yml
+++ b/P004641.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W1AC26
   title: དབུ་མ་ལ་འཇུག་པའི་ཚིག་འགྲེལ་ལེགས་བཤད་རྗེས་འབྲང་།
   author: ''
-  volumes: {}
+  volumes:
+    d93cffd304894836a81ee6127066409a:
+      image_group_id: I2PD18434
+      title: ''
+      volume_number: 1
+      total_pages: 474
