--- a/P004641.opf/layers/v001/Pagination.yml
+++ b/P004641.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: e7eaff9c2b4d41d6937914a12cdac443
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   1ef7c16a47a848a9b09546d07622b6e3:
